# etl-wikipedia-updates

./: .dockerignore  .gitignore  Dockerfile  config.py  config.yaml  config.yaml.example  dashboard.py  db_helper.py  docker-compose.yaml  main.py  pipeline.py  prometheus.yaml  pyproject.toml
.github/workflows/: deploy-to-prod.yaml  deploy.yaml
src/: config.py  pipeline.py
